made changes to prevent mobile horizontal scrolling

--- a/resources/assets/sass/base/_base.scss
+++ b/resources/assets/sass/base/_base.scss
@@ -1,9 +1,12 @@
 /* Base Styles */
-body {
+body, html {
 	overflow-x: hidden !important;
 	background: $white;
+	width: 100%;
 }
-
+body {
+	position: relative
+}
 a:link, a:visited {
 	color: $orange;
 	text-decoration: underline;
